// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxscoreTeam attribute population from local object parses data correctly 1`] = `
BoxscoreTeam {
  "matchupScore": 204,
  "players": Array [
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Aaron",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Rodgers",
        "percentOwned": 99.21669,
        "percentOwnedChange": 0.23744,
        "percentStarted": 74.42904,
        "playerId": 8439,
      },
      "position": "QB",
      "projectedPoints": 20.46,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.47,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": 0.19,
        "passingInterceptions": -0.76,
        "passingTouchdowns": 7.87,
        "passingYards": 11.21,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": 0.01,
        "rushingTouchdowns": 0.67,
        "rushingYards": 1.73,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": 1.04,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 1.04,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Mark",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "22",
        "lastName": "Ingram II",
        "percentOwned": 94.37537,
        "percentOwnedChange": -1.14045,
        "percentStarted": 30.44836,
        "playerId": 13981,
      },
      "position": "RB",
      "projectedPoints": 5.67,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.19,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.01,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 0.27,
        "receivingYards": 0.92,
        "rushing2PtConversions": 0.02,
        "rushingTouchdowns": 1.49,
        "rushingYards": 3.13,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 1.5,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": 2.8,
      },
      "totalPoints": 4.3,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tevin",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "26",
        "lastName": "Coleman",
        "percentOwned": 91.59903,
        "percentOwnedChange": -0.95381,
        "percentStarted": 42.36213,
        "playerId": 17689,
      },
      "position": "RB",
      "projectedPoints": 10.41,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.13,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.01,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 0.96,
        "receivingYards": 2.41,
        "rushing2PtConversions": 0.04,
        "rushingTouchdowns": 2.09,
        "rushingYards": 5.03,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 0.9,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": 6,
        "rushingYards": 4.5,
      },
      "totalPoints": 11.4,
    },
  ],
  "team": Team {
    "abbreviation": "NUTS",
    "awayLosses": undefined,
    "awayTies": undefined,
    "awayWinningPercentage": undefined,
    "awayWins": undefined,
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionLosses": undefined,
    "divisionStanding": 4,
    "divisionTies": undefined,
    "divisionWinningPercentage": undefined,
    "divisionWins": undefined,
    "firstName": "No Bell",
    "homeLosses": undefined,
    "homeTies": undefined,
    "homeWinningPercentage": undefined,
    "homeWins": undefined,
    "lastName": "Peace Prize",
    "leagueId": undefined,
    "leagueStanding": 6,
    "logoURL": "https://i.imgur.com/OQhSYj1.gif",
    "losses": undefined,
    "pointsAgainst": undefined,
    "pointsFor": undefined,
    "seasonId": undefined,
    "streakLength": undefined,
    "streakType": "ERROR: streakType not recognized",
    "teamId": 9,
    "ties": undefined,
    "waiverRank": 1,
    "winningPercentage": undefined,
    "wins": undefined,
  },
  "weekBenchProjectedScore": 47.56,
  "weekBenchScore": 72.06,
  "weekProjectedScore": 90.47,
  "weekScore": 70.64,
}
`;

exports[`BoxscoreTeam attribute population from server response parses data correctly 1`] = `
BoxscoreTeam {
  "matchupScore": 234,
  "players": Array [
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Aaron",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "12",
        "lastName": "Rodgers",
        "percentOwned": 99.21669,
        "percentOwnedChange": 0.23744,
        "percentStarted": 74.42904,
        "playerId": 8439,
      },
      "position": "QB",
      "projectedPoints": 20.46,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.47,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": 0.19,
        "passingInterceptions": -0.76,
        "passingTouchdowns": 7.87,
        "passingYards": 11.21,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": 0.01,
        "rushingTouchdowns": 0.67,
        "rushingYards": 1.73,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": 1.04,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 1.04,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Mark",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "22",
        "lastName": "Ingram II",
        "percentOwned": 94.37537,
        "percentOwnedChange": -1.14045,
        "percentStarted": 30.44836,
        "playerId": 13981,
      },
      "position": "RB",
      "projectedPoints": 5.67,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.19,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.01,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 0.27,
        "receivingYards": 0.92,
        "rushing2PtConversions": 0.02,
        "rushingTouchdowns": 1.49,
        "rushingYards": 3.13,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 1.5,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": 2.8,
      },
      "totalPoints": 4.3,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tevin",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "26",
        "lastName": "Coleman",
        "percentOwned": 91.59903,
        "percentOwnedChange": -0.95381,
        "percentStarted": 42.36213,
        "playerId": 17689,
      },
      "position": "RB",
      "projectedPoints": 10.41,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.13,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.01,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 0.96,
        "receivingYards": 2.41,
        "rushing2PtConversions": 0.04,
        "rushingTouchdowns": 2.09,
        "rushingYards": 5.03,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 0.9,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": 6,
        "rushingYards": 4.5,
      },
      "totalPoints": 11.4,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Julio",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "11",
        "lastName": "Jones",
        "percentOwned": 99.93748,
        "percentOwnedChange": -0.00715,
        "percentStarted": 97.29097,
        "playerId": 13982,
      },
      "position": "WR",
      "projectedPoints": 13.65,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.1,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.06,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 3.91,
        "receivingYards": 9.61,
        "rushing2PtConversions": 0,
        "rushingTouchdowns": 0.03,
        "rushingYards": 0.13,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 6,
        "receivingYards": 13.8,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 19.8,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "JuJu",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "19",
        "lastName": "Smith-Schuster",
        "percentOwned": 99.27393,
        "percentOwnedChange": 0.09938,
        "percentStarted": 96.47065,
        "playerId": 18306,
      },
      "position": "WR",
      "projectedPoints": 12.5,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.06,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.07,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 4.03,
        "receivingYards": 8.46,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 6,
        "receivingYards": 3.7,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 9.7,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "David",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "85",
        "lastName": "Njoku",
        "percentOwned": 72.99284,
        "percentOwnedChange": -1.10941,
        "percentStarted": 38.99002,
        "playerId": 18303,
      },
      "position": "TE",
      "projectedPoints": 5.26,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.04,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.04,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 1.42,
        "receivingYards": 3.84,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 4.2,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 4.2,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Tarik",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "29",
        "lastName": "Cohen",
        "percentOwned": 93.2453,
        "percentOwnedChange": -0.48103,
        "percentStarted": 56.8237,
        "playerId": 18171,
      },
      "position": "RB/WR/TE",
      "projectedPoints": 8.92,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": 0,
        "lostFumbles": -0.14,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": 0.16,
        "receiving2PtConversions": 0.02,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 1.12,
        "receivingYards": 4.53,
        "rushing2PtConversions": 0.01,
        "rushingTouchdowns": 0.69,
        "rushingYards": 2.53,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 0.8,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": 6,
        "rushingYards": 2.4,
      },
      "totalPoints": 9.2,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "D/ST",
          "Bench",
        ],
        "firstName": "Bears",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": undefined,
        "lastName": "D/ST",
        "percentOwned": 97.27124,
        "percentOwnedChange": -0.48172,
        "percentStarted": 75.43181,
        "playerId": 60003,
      },
      "position": "D/ST",
      "projectedPoints": 6.46,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": 0.05,
        "defensiveBlockedKicks": 0.21,
        "defensiveFumbles": 1.12,
        "defensiveInterceptions": 1.72,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": 2.51,
        "defensiveSafeties": 0.04,
        "fumbleReturnTouchdown": 0.12,
        "interceptionReturnTouchdown": 0.47,
        "kickoffReturnTouchdown": 0.06,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": 0.16,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": 3,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": 3,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": 3,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 9,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "K",
          "Bench",
        ],
        "firstName": "Wil",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "3",
        "lastName": "Lutz",
        "percentOwned": 95.81607,
        "percentOwnedChange": -0.73695,
        "percentStarted": 87.27326,
        "playerId": 18104,
      },
      "position": "K",
      "projectedPoints": 7.15,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": 2.46,
        "madeFieldGoalsFrom40To49": 1.63,
        "madeFieldGoalsFrom50Plus": 0.82,
        "madeFieldGoalsFromUnder40": 2.58,
        "missedExtraPoints": -0.11,
        "missedFieldGoals": -0.22,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": 2,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 2,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "RB",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Jordan",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "24",
        "lastName": "Howard",
        "percentOwned": 88.57899,
        "percentOwnedChange": -0.73251,
        "percentStarted": 33.90609,
        "playerId": 17919,
      },
      "position": "Bench",
      "projectedPoints": 7.95,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.11,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 0.2,
        "receivingYards": 0.74,
        "rushing2PtConversions": 0.03,
        "rushingTouchdowns": 1.74,
        "rushingYards": 5.35,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 0.5,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": 12,
        "rushingYards": 10.9,
      },
      "totalPoints": 23.4,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Alshon",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "17",
        "lastName": "Jeffery",
        "percentOwned": 92.4714,
        "percentOwnedChange": 0.05134,
        "percentStarted": 54.13407,
        "playerId": 14912,
      },
      "position": "Bench",
      "projectedPoints": 7.71,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.05,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.04,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 2.05,
        "receivingYards": 5.68,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 6,
        "receivingYards": 5.9,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 11.9,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "TE",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Kyle",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "82",
        "lastName": "Rudolph",
        "percentOwned": 82.67324,
        "percentOwnedChange": 2.35959,
        "percentStarted": 48.47325,
        "playerId": 14054,
      },
      "position": "Bench",
      "projectedPoints": 6.3,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.03,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.04,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 2.15,
        "receivingYards": 4.14,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": 1.9,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 1.9,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "WR",
          "RB/WR/TE",
          "Bench",
        ],
        "firstName": "Calvin",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "18",
        "lastName": "Ridley",
        "percentOwned": 82.24974,
        "percentOwnedChange": 1.19766,
        "percentStarted": 31.08707,
        "playerId": 18584,
      },
      "position": "Bench",
      "projectedPoints": 7.03,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": 0.01,
        "lostFumbles": -0.06,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": 0.03,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 1.94,
        "receivingYards": 4.79,
        "rushing2PtConversions": 0,
        "rushingTouchdowns": 0.07,
        "rushingYards": 0.25,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": undefined,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": undefined,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": 6,
        "receivingYards": 3.2,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": undefined,
        "rushingYards": undefined,
      },
      "totalPoints": 9.2,
    },
    BoxscorePlayer {
      "isLocked": true,
      "player": Player {
        "eligiblePositions": Array [
          "QB",
          "Bench",
        ],
        "firstName": "Lamar",
        "isActive": true,
        "isDroppable": undefined,
        "isIREligible": false,
        "jerseyNumber": "8",
        "lastName": "Jackson",
        "percentOwned": 57.39529,
        "percentOwnedChange": 5.06828,
        "percentStarted": 24.54791,
        "playerId": 18590,
      },
      "position": "Bench",
      "projectedPoints": 18.56,
      "projectedStats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -0.77,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": 0.15,
        "passingInterceptions": -1.25,
        "passingTouchdowns": 4.39,
        "passingYards": 6.62,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": 0.02,
        "rushingTouchdowns": 2.65,
        "rushingYards": 6.72,
      },
      "stats": BoxscorePlayerPointStats {
        "defensive0PointsAllowed": undefined,
        "defensive100To199YardsAllowed": undefined,
        "defensive14To17PointsAllowed": undefined,
        "defensive1To6PointsAllowed": undefined,
        "defensive200To299YardsAllowed": undefined,
        "defensive28To34PointsAllowed": undefined,
        "defensive350To399YardsAllowed": undefined,
        "defensive35To45PointsAllowed": undefined,
        "defensive400To449YardsAllowed": undefined,
        "defensive450To499YardsAllowed": undefined,
        "defensive500To549YardsAllowed": undefined,
        "defensive7To13PointsAllowed": undefined,
        "defensiveBlockedKickForTouchdowns": undefined,
        "defensiveBlockedKicks": undefined,
        "defensiveFumbles": undefined,
        "defensiveInterceptions": undefined,
        "defensiveOver550YardsAllowed": undefined,
        "defensiveSacks": undefined,
        "defensiveSafeties": undefined,
        "fumbleReturnTouchdown": undefined,
        "interceptionReturnTouchdown": undefined,
        "kickoffReturnTouchdown": undefined,
        "lostFumbles": -2,
        "madeExtraPoints": undefined,
        "madeFieldGoalsFrom40To49": undefined,
        "madeFieldGoalsFrom50Plus": undefined,
        "madeFieldGoalsFromUnder40": undefined,
        "missedExtraPoints": undefined,
        "missedFieldGoals": undefined,
        "passing2PtConversions": undefined,
        "passingInterceptions": undefined,
        "passingTouchdowns": undefined,
        "passingYards": 7.16,
        "puntReturnTouchdown": undefined,
        "receiving2PtConversions": undefined,
        "receivingReceptions": undefined,
        "receivingTouchdowns": undefined,
        "receivingYards": undefined,
        "rushing2PtConversions": undefined,
        "rushingTouchdowns": 12,
        "rushingYards": 8.5,
      },
      "totalPoints": 25.66,
    },
    BoxscorePlayer {
      "isLocked": undefined,
      "player": undefined,
      "position": "Bench",
      "projectedPoints": undefined,
      "projectedStats": BoxscorePlayerPointStats {},
      "stats": BoxscorePlayerPointStats {},
      "totalPoints": undefined,
    },
    BoxscorePlayer {
      "isLocked": undefined,
      "player": undefined,
      "position": "Bench",
      "projectedPoints": undefined,
      "projectedStats": BoxscorePlayerPointStats {},
      "stats": BoxscorePlayerPointStats {},
      "totalPoints": undefined,
    },
  ],
  "team": Team {
    "abbreviation": "NUTS",
    "awayLosses": undefined,
    "awayTies": undefined,
    "awayWinningPercentage": undefined,
    "awayWins": undefined,
    "division": Object {
      "divisionId": 0,
      "divisionName": "Division 1",
      "size": 4,
    },
    "divisionLosses": undefined,
    "divisionStanding": 4,
    "divisionTies": undefined,
    "divisionWinningPercentage": undefined,
    "divisionWins": undefined,
    "firstName": "No Bell",
    "homeLosses": undefined,
    "homeTies": undefined,
    "homeWinningPercentage": undefined,
    "homeWins": undefined,
    "lastName": "Peace Prize",
    "leagueId": undefined,
    "leagueStanding": 6,
    "logoURL": "https://i.imgur.com/OQhSYj1.gif",
    "losses": undefined,
    "pointsAgainst": undefined,
    "pointsFor": undefined,
    "seasonId": undefined,
    "streakLength": undefined,
    "streakType": "ERROR: streakType not recognized",
    "teamId": 9,
    "ties": undefined,
    "waiverRank": 1,
    "winningPercentage": undefined,
    "wins": undefined,
  },
  "weekBenchProjectedScore": 47.56,
  "weekBenchScore": 72.06,
  "weekProjectedScore": 90.47,
  "weekScore": 70.64,
}
`;
